--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container w-80">
   <h1>Liste Restaurants</h1>
   <ul>
     <% @restaurants.each do |restaurant| %>
-        <li> <%= restaurant.name %> </li>
+        <li> <%= link_to restaurant.name, restaurant_path(restaurant) %> </li>
       <% end %>
   </ul>
   <br>
-</div>
+
+    <%= link_to 'Ajouter un restaurant', new_restaurant_path %>
